[gd_scene load_steps=13 format=3 uid="uid://b8xcoqpmgts1i"]

[ext_resource type="Theme" uid="uid://5im7y78yca4y" path="res://themes/pixel.tres" id="1_deuv8"]
[ext_resource type="Script" path="res://scenes/home/drawer/drawer.gd" id="2_kt8np"]
[ext_resource type="Texture2D" uid="uid://ccxqk685vpfmr" path="res://assets/img/buttons/Yellow.png" id="3_rmjri"]
[ext_resource type="Texture2D" uid="uid://baldfvib8npgc" path="res://assets/img/buttons/Red.png" id="4_1abol"]
[ext_resource type="Texture2D" uid="uid://dp6au1s2cm1v0" path="res://assets/img/buttons/Green.png" id="5_g2vai"]
[ext_resource type="Texture2D" uid="uid://dttgk3eadjifd" path="res://assets/img/buttons/Blue.png" id="6_sb4eg"]
[ext_resource type="Texture2D" uid="uid://c43xlomsm26k2" path="res://assets/img/zz_mouse_64.png" id="7_hwf45"]
[ext_resource type="Texture2D" uid="uid://cgc7asuvr1um5" path="res://assets/img/default/placeholder.svg" id="8_mp2f3"]

[sub_resource type="Animation" id="Animation_m3we3"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drawer/CategoryBar:custom_minimum_size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(85, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_66ngf"]
resource_name = "close_category"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drawer/CategoryBar:custom_minimum_size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(300, -0.25, 0, 0.25, 0, 85, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_4m38c"]
resource_name = "open_category"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drawer/CategoryBar:custom_minimum_size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(85, -0.25, 0, 0, 82.5, 300, -0.233333, -2.5, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qcudj"]
_data = {
"RESET": SubResource("Animation_m3we3"),
"close_category": SubResource("Animation_66ngf"),
"open_category": SubResource("Animation_4m38c")
}

[node name="Drawer" type="HBoxContainer"]
size_flags_vertical = 8
focus_neighbor_top = NodePath("../BannerScrollList/BannerList")
theme = ExtResource("1_deuv8")
theme_override_constants/separation = 0
script = ExtResource("2_kt8np")

[node name="CategoryBar" type="ColorRect" parent="."]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_deuv8")
color = Color(0, 0, 0, 1)

[node name="CategoryList" type="ItemList" parent="CategoryBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_right = NodePath("../../ItemList")
theme = ExtResource("1_deuv8")
item_count = 5
same_column_width = true
item_0/text = " Tout"
item_0/icon = ExtResource("3_rmjri")
item_1/text = " Populaire"
item_1/icon = ExtResource("4_1abol")
item_2/text = " Arcade"
item_2/icon = ExtResource("5_g2vai")
item_3/text = " PC"
item_3/icon = ExtResource("6_sb4eg")
item_4/text = " ZZ"
item_4/icon = ExtResource("7_hwf45")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../CategoryBar/CategoryList")
theme = ExtResource("1_deuv8")
max_text_lines = 2
item_count = 5
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(128, 128)
item_0/text = "Super Jeu 1"
item_0/icon = ExtResource("8_mp2f3")
item_1/text = "Super Jeu 2"
item_1/icon = ExtResource("8_mp2f3")
item_2/text = "Super Jeu 3"
item_2/icon = ExtResource("8_mp2f3")
item_3/text = "Super Jeu 4"
item_3/icon = ExtResource("8_mp2f3")
item_4/text = "Super Jeu 5"
item_4/icon = ExtResource("8_mp2f3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_qcudj")
}

[connection signal="focus_entered" from="CategoryBar/CategoryList" to="." method="_on_category_list_focus_entered"]
[connection signal="focus_exited" from="CategoryBar/CategoryList" to="." method="_on_category_list_focus_exited"]
[connection signal="focus_entered" from="ItemList" to="." method="_on_item_list_focus_entered"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
